[project]
name = "grouptaskligia"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayrsz",email = "matheusayressantos@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.11"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "kaggle (>=1.8.3,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false